--- a/src/views/about-us/about-us.html
+++ b/src/views/about-us/about-us.html
@@ -19,16 +19,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- FONT -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300;400;500;600&amp;display=swap"
-      rel="stylesheet"
-    />
-
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="about-us.css" />
+    <link rel="stylesheet" href="./about-us.css" />
     <script src="about-us.js" type="module" defer></script>
   </head>
   <body>
@@ -36,41 +28,15 @@
     <header id="header"></header>
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="">
-      <section class="title ftSerif">
-        <h2>About ojakkyu</h2>
-        <!-- <p class="line"></p> -->
-        <!-- <p class="design">열두달 이야기</p> -->
-      </section>
-
-      <section class="description ftSerif">
-        <!-- <div class="subtitle">
-          'ojakkyu'는 칠월칠석일에 두 사람을 연결해주는 오작교에서 시작된
-          이름입니다.
-        </div> -->
-
-        <div class="contents">
-          <div class="contentsIn">
-            <div class="topContents">
-              안녕하세요. <br />
-              브랜드 오작뀨입니다. 이렇게 인사를 드리게되어 영광입니다.
-              <br /><br />
-
-              오작뀨는 인연을 연결하는 다리에서 유래하여 <br />
-              연인뿐만 아니라 친구, 가족 모든 사람의 연결고리가 되고자 합니다.
-            </div>
-            <div class="bottomContents">
-              행복, 용기, 건강, 성공 <br /><br />
-
-              오작뀨에서는 아름다운 꽃말만큼이나 <br />
-              다양한 의미를 지닌 '열두달의 이야기 시리즈'를<br />
-              만나보실 수 있습니다. <br /><br />
-
-              늘 함께 할 수 있는 반지, 팔찌, 목걸이를 <br />
-              소중한 사람에게 선물해 주세요.
-            </div>
+      <div class="contents">
+        <div class="contentsIn">
+          <img src="../images/About_us_img.jpg" alt="about-us" />
+          <div class="txt">
+            <p>오작뀨</p>
+            <p>단 하나의 추억을 선물해 드립니다.</p>
           </div>
         </div>
-      </section>
+      </div>
     </main>
     <!-- 푸터 -->
     <footer id="footer"></footer>
