--- a/src/views/about-us/about-us.css
+++ b/src/views/about-us/about-us.css
@@ -3,6 +3,8 @@
 
 .contentsIn {
   padding-top: 60px;
+  margin: 0 auto;
+  max-width: 1280px;
 
   text-align: center;
 
@@ -10,7 +12,7 @@
 }
 
 img {
-  max-width: 1280px;
+  width: 100%;
   height: auto;
 }
 
@@ -21,5 +23,5 @@ img {
 
   position: absolute;
   top: 200px;
-  left: 400px;
+  left: 200px;
 }
