Style: product-add,edit

--- a/src/views/product-edit/product-edit.html
+++ b/src/views/product-edit/product-edit.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="./product-edit.js" type="module"></script>
 
-    <title>product edit</title>
+    <title>상품 수정</title>
 
     <!-- 아이콘 -->
     <link
@@ -26,7 +26,7 @@
 
     <!-- 제품 수정 폼(Form) -->
     <main role="main" id="addProductSection">
-        <h2>제품 수정/삭제</h2>
+        <h2>상품 수정/삭제</h2>
         <form class="addProduct" id="addProductForm">
           <div class="formInputs">
             <div class="left">
