--- a/src/views/product-add/product-add.css
+++ b/src/views/product-add/product-add.css
@@ -24,7 +24,7 @@ h2 {
 }
 
 label {
-  color: #4e84b1;
+  color: rgb(148, 143, 143);
 }
 
 input::placeholder {
@@ -37,9 +37,9 @@ input {
   width: 100%;
   box-sizing: border-box;
 
-  background-color: #eff5fb;
+  background-color: white;
 
-  border: 1px solid #4e84b1;
+  border: 1px solid #e9b7b8;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -52,8 +52,8 @@ button:hover {
 
   color: white;
 
-  border-color: #f24f70;
-  background-color: #f24f70;
+  border-color: #e9b7b8;
+  background-color: #e9b7b8;
 }
 
 button {
@@ -61,9 +61,9 @@ button {
   padding: 30px 0;
   width: 100%;
 
-  color: #f24f70;
+  color: #e9b7b8;
 
-  border: 1px solid #f24f70;
+  border: 1px solid #e9b7b8;
   border-radius: 5px;
 
   background-color: transparent;
