--- a/src/views/product-add/product-add.html
+++ b/src/views/product-add/product-add.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>product add</title>
+    <title>상품 추가</title>
 
     <!-- 아이콘 -->
     <link
@@ -24,7 +24,7 @@
 
     <!-- 회원가입 폼(Form) -->
     <main role="main" id="addProductSection">
-      <h2>제품 추가</h2>
+      <h2>상품 추가</h2>
         <form class="addProduct" id="addProductForm">
           <div class="formInputs">
             <div class="left">
