--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -9,10 +9,10 @@
 
     <link rel="icon" type="image/png" sizes="16x16" href="/images/facon.ico" />
     <!-- bulma css 관련 -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
+    /> -->
 
     <script src="product.js" type="module"></script>
   </head>
@@ -22,10 +22,10 @@
 
     <section class="categoryWrap">
       <div class="categoryTitle">
-        <h1 id="category">14k 팔찌</h1>
+        <h1 id="category"></h1>
       </div>
       <div class="birthStoneWrapper">
-        <ul id="birthStoneUl">
+        <ul id="birthStoneUl" class="birthCategory">
           <li>
             <button class="button" id="all">전체</button>
           </li>
