--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -30,7 +30,7 @@
     <!-- 회원가입 폼(Form) -->
     <section id="signupContainer">
       <div class="signupWrap">
-        <h2><strong>이메일 간편 가입</strong></h2>
+        <h2><strong>SIGN UP</strong></h2>
 
         <form class="formWrap" id="registerUserForm">
           <!-- 이메일 -->
