--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -3,13 +3,73 @@
 
 
 /* 비주얼 배너 */
-.visualBanner {
-  max-width: 100%;
+/* 슬라이드 */
+
+.slideWrap input[id*="slide"] {
+  display: none;
 }
 
-.visualBanner img {
+.bannerContainer {
   max-width: 100%;
+  margin: auto;
 }
+
+.bannerWrap .slideWrap {
+  overflow: hidden;
+}
+
+.bannerWrap .slideList {
+  white-space: nowrap;
+  font-size: 0; 
+}
+
+.bannerWrap .slideList > li {
+  display: inline-block;
+  vertical-align: middle;
+  width: 100%;
+  transition: all 0.5s;
+}
+
+.bannerWrap .slideList > li > a {
+  display: block;
+  position: relative;
+}
+
+.bannerWrap .slideList > li > a img {
+  width: 100%;
+  height: 570px;
+}
+
+.bannerWrap .slideList label {
+  position: absolute;
+  z-index: 10;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 50px;
+  cursor: pointer;
+}
+
+.bannerWrap .slideList .left {
+  left: 30px;
+  background: url("../images/arrow_right.png") center center / 100% no-repeat;
+  transform: rotate(180deg);
+}
+
+.bannerWrap .slideList .right {
+  right: 35px;
+  background: url("../images/arrow_right.png") center center / 100% no-repeat;
+}
+
+.bannerWrap .slideWrap [id="slide01"]:checked ~ .slideList > li {
+  transform: translateX(0%);
+}
+.bannerWrap .slideWrap [id="slide02"]:checked ~ .slideList > li {
+  transform: translateX(-100%);
+}
+.bannerWrap .slideWrap [id="slide03"]:checked ~ .slideList > li {
+  transform: translateX(-200%);
+}
+
 
 /* 메인 */
 #mainWrap {
@@ -71,13 +131,6 @@
   text-indent: 40px;
   color:rgb(82, 82, 82);
 }
-
-
-/* .besideIframe .hashTag {
-  color: gray;
-  font-size: 12px;
-  display: inline-flex;
-} */
 
 /* 신상품 리스트 */
 .newArrival {
@@ -156,3 +209,8 @@
   transform: scale(1.1);
   transition: all 0.4s;
 }
+
+
+
+
+
