Style: 제품 -> 상품으로 수정

--- a/src/views/product-add/product-add.html
+++ b/src/views/product-add/product-add.html
@@ -28,20 +28,20 @@
         <form class="addProduct" id="addProductForm">
           <div class="formInputs">
             <div class="left">
-  <!-- 제품 사진 -->
+  <!-- 상품 사진 -->
               <div>
-                  <label for="productImage" class="textLeft">제품 사진</label>
+                  <label for="productImage" class="textLeft">상품 사진</label>
                   <div>
                       <input
                       class="input"
                       id="productImage"
                       type="text"
-                      placeholder="제품 사진 링크를 입력하세요"
+                      placeholder="상품 사진 링크를 입력하세요"
                       />
                   </div>
               </div>
               
-  <!-- 제품 ID -->
+  <!-- 상품 ID -->
             <div>
               <label for="productId" class="textLeft">productId</label>
               <div>
@@ -49,12 +49,12 @@
                   class="input"
                   id="productId"
                   type="text"
-                  placeholder="제품 id 값을 입력하세요"
+                  placeholder="상품 id 값을 입력하세요"
                 />
               </div>
             </div>
   
-  <!-- 제품 명 -->
+  <!-- 상품 명 -->
             <div>
               <label for="productName" class="textLeft">productName</label>
               <div>
@@ -62,7 +62,7 @@
                   class="input"
                   id="productName"
                   type="text"
-                  placeholder="제품 명을 입력하세요"
+                  placeholder="상품 명을 입력하세요"
                 />
               </div>
             </div>
@@ -103,7 +103,7 @@
                   class="input"
                   id="price"
                   type="text"
-                  placeholder="제품 가격을 입력하세요"
+                  placeholder="상품 가격을 입력하세요"
                 />
               </div>
             </div>
@@ -137,7 +137,7 @@
             </div>
           </div>
           <!-- 회원가입 버튼 -->
-          <button class="submitBtn" id="submitButton">제품 등록하기</button>
+          <button class="submitBtn" id="submitButton">상품 등록하기</button>
         </form>
       </div>
     </main>
