--- a/src/views/product-edit/product-edit.html
+++ b/src/views/product-edit/product-edit.html
@@ -24,26 +24,26 @@
     <!-- 헤더 -->
     <header id="header"></header>
 
-    <!-- 제품 수정 폼(Form) -->
+    <!-- 상품 수정 폼(Form) -->
     <main role="main" id="addProductSection">
         <h2>상품 수정/삭제</h2>
         <form class="addProduct" id="addProductForm">
           <div class="formInputs">
             <div class="left">
-    <!-- 제품 사진 -->
+    <!-- 상품 사진 -->
                 <div>
-                    <label for="productImage" class="textLeft">제품 사진</label>
+                    <label for="productImage" class="textLeft">상품 사진</label>
                     <div>
                         <input
                         class="input"
                         id="productImage"
                         type="text"
-                        placeholder="제품 사진 링크를 입력하세요"
+                        placeholder="상품 사진 링크를 입력하세요"
                         />
                     </div>
                 </div>
                 
-    <!-- 제품 ID -->
+    <!-- 상품 ID -->
               <div>
                 <label for="productId" class="textLeft">productId</label>
                 <div>
@@ -51,12 +51,12 @@
                     class="input"
                     id="productId"
                     type="text"
-                    placeholder="제품 id 값을 입력하세요"
+                    placeholder="상품 id 값을 입력하세요"
                   />
                 </div>
               </div>
     
-    <!-- 제품 명 -->
+    <!-- 상품 명 -->
               <div>
                 <label for="productName" class="textLeft">productName</label>
                 <div>
@@ -64,7 +64,7 @@
                     class="input"
                     id="productName"
                     type="text"
-                    placeholder="제품 명을 입력하세요"
+                    placeholder="상품 명을 입력하세요"
                   />
                 </div>
               </div>
@@ -105,7 +105,7 @@
                     class="input"
                     id="price"
                     type="text"
-                    placeholder="제품 가격을 입력하세요"
+                    placeholder="상품 가격을 입력하세요"
                   />
                 </div>
               </div>
@@ -144,7 +144,7 @@
                     class="input"
                     id="likesInput"
                     type="text"
-                    placeholder="제품 likes 값을 입력하세요"
+                    placeholder="상품 likes 값을 입력하세요"
                   />
                 </div>
               </div>
@@ -163,10 +163,10 @@
             </div>
           </div class="formInputs">
 
-          <!-- 제품수정 버튼 -->
+          <!-- 상품수정 버튼 -->
           <div class="buttons">
-            <button class="submitButton" id="editButton">제품 수정하기</button>
-            <button class="submitButton" id="deleteButton">제품 삭제하기</button>
+            <button class="submitButton" id="editButton">상품 수정하기</button>
+            <button class="submitButton" id="deleteButton">상품 삭제하기</button>
           </div>
         </form>
       </div>
