--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>제품 상세 페이지</title>
+    <title>상품 상세 페이지</title>
 
     <link rel="stylesheet" href="./product-detail.css" />
 
@@ -22,7 +22,7 @@
             <ul class="productDesc" id="productDesc">
               <li>
                 <label>이니셜 각인 : </label>
-                <input type="text" maxlength="8" id="initialInput" required/>
+                <input type="text" maxlength="8" id="initialInput" required />
                 <label>최대 8글자</label>
               </li>
             </ul>
