--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>카테고리 제품 페이지</title>
+    <title>카테고리 상품 페이지</title>
 
     <link rel="stylesheet" href="./product.css" />
 
