--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -44,9 +44,11 @@
 }
 
 .input {
-  border: none;
+  border: 1px solid #d3d3d3;
   width: 400px;
   height: 40px;
+  border-radius: 10px;
+  text-indent: 20px;
 }
 
 .input:focus{
