Fix: 세부 오류 사항 수정

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -27,7 +27,7 @@
           <h2 class="cartTitle">장바구니</h2>
 
           <div class="countDelete">
-            <p class="productCount">총 <span class="countAllItem"></span> 개</p>
+            <p class="productCount" id="totalItemNumber"></p>
             <p>
               <button class="deleteBtn">전체삭제</button>
             </p>
