Refactor: 코드 정리

--- a/src/views/components/header.html
+++ b/src/views/components/header.html
@@ -1,22 +1,17 @@
+<!-- 헤더 -->
+<section id="headerWrap">
+  <nav>
+    <div class="headerTop">
+      <img src="#" alt="logo" class="hidden" />
+      <h1><a href="/">오작뀨</a></h1>
 
-    <!-- 헤더 -->
-    <section id="headerWrap">
-      <nav>
-        <div class="headerTop">
-          <img src="#" alt="logo" class="hidden"/>
-          <h1><a href="/">오작뀨</a></h1>
+      <div class="util">
+        <ul class="utilContents"></ul>
+      </div>
+    </div>
 
-          <div class="util">
-            <ul class="utilContents">
-
-            </ul>
-          </div>
-        </div>
-
-        <div class="gnb">
-          <ul class="gnbContents">
-           
-          </ul>
-        </div>
-      </nav>
-    </section>
+    <div class="gnb">
+      <ul class="gnbContents"></ul>
+    </div>
+  </nav>
+</section>
