--- a/src/views/error/error.html
+++ b/src/views/error/error.html
@@ -13,11 +13,11 @@
       href="../images/facon.ico"
     />
 
-    <script
+    <scriptㄹ
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
       crossorigin="anonymous"
-    ></script>
+    ></scriptㄹ>
 
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,8 +28,8 @@
     />
 
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="./error.css" />
-    <script src="./error.js" type="module" defer></script>
+    <link rel="stylesheet" href="/error/error.css" />
+    <script src="/error/error.js" type="module" defer></script>
   </head>
   <body class="error">
     <!-- 헤더 -->
