--- a/src/views/admin-product/admin-product.html
+++ b/src/views/admin-product/admin-product.html
@@ -41,44 +41,11 @@
           <h1 class="subtitle is-4">주문관리</h1>
         </div>
 
-        <!-- 총 요약 -->
-        <nav class="level">
-          <div class="level-item has-text-centered">
-            <div>
-              <p class="heading">총주문수</p>
-              <p class="title" id="ordersCount">-</p>
-            </div>
-          </div>
-          <div class="level-item has-text-centered">
-            <div>
-              <p class="heading">상품준비중</p>
-              <p class="title" id="prepareCount">-</p>
-            </div>
-          </div>
-          <div class="level-item has-text-centered">
-            <div>
-              <p class="heading">상품배송중</p>
-              <p class="title" id="deliveryCount">-</p>
-            </div>
-          </div>
-          <div class="level-item has-text-centered">
-            <div>
-              <p class="heading">배송완료</p>
-              <p class="title" id="completeCount">-</p>
-            </div>
-          </div>
-        </nav>
+ 
 
         <div class="container orders-container" id="ordersContainer">
-          <div
-            class="columns notification is-info is-light is-mobile orders-top"
-          >
-            <div class="column is-2">날짜</div>
-            <div class="column is-4">주문정보</div>
-            <div class="column is-2">주문총액</div>
-            <div class="column is-2">상태관리</div>
-            <div class="column is-2">취소</div>
-          </div>
+    
+          <div class="product"></div>
         </div>
       </div>
     </section>
