--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>오작뀨</title>
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/images/facon.ico"
-    />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/facon.ico" />
 
     <link rel="stylesheet" href="home.css" />
     <script src="home.js" type="module"></script>
@@ -25,35 +20,33 @@
     <section class="bannerContainer">
       <article class="bannerWrap">
         <div class="slideWrap">
-            <input type="radio" name="slide" id="slide01" checked />
-            <input type="radio" name="slide" id="slide02" />
-            <input type="radio" name="slide" id="slide03" />
+          <input type="radio" name="slide" id="slide01" checked />
+          <input type="radio" name="slide" id="slide02" />
+          <input type="radio" name="slide" id="slide03" />
 
           <ul class="slideList">
             <li>
               <a>
                 <label for="slide03" class="left"></label>
-                <img src="/images/visualBanner1.png" alt="bg01"/>
+                <img src="/images/visualBanner1.png" alt="bg01" />
                 <label for="slide02" class="right"></label>
               </a>
             </li>
             <li>
               <a>
                 <label for="slide01" class="left"></label>
-                <img src="/images/visualBanner2.jpg" alt="bg02"/>
+                <img src="/images/visualBanner2.jpg" alt="bg02" />
                 <label for="slide03" class="right"></label>
               </a>
             </li>
             <li>
               <a>
                 <label for="slide02" class="left"></label>
-                <img src="/images/visualBanner3.jpg" alt="bg03"/>
+                <img src="/images/visualBanner3.jpg" alt="bg03" />
                 <label for="slide01" class="right"></label>
               </a>
             </li>
- 
           </ul>
-         
         </div>
       </article>
     </section>
@@ -74,7 +67,7 @@
       <!-- 두 번째 컨텐츠 -->
       <section class="contentsSec">
         <article>
-          <iframe
+          <!-- <iframe
             title="youtube"
             width="600"
             height="360"
@@ -83,7 +76,14 @@
             <a href="/images/iframe.jpg" target="img">
               <img src="/images/iframe.jpg" alt="iframe" />
             </a>
-          </iframe>
+          </iframe> -->
+
+          <div class="sideIframe">
+            <img
+              src="https://images.unsplash.com/photo-1621334119886-cbc9e36fcf7c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+              alt="jewerly_img"
+            />
+          </div>
 
           <div class="besideIframe">
             <div>
@@ -108,7 +108,7 @@
           <strong>NEW ARRIVAL</strong>
           <p>오작뀨의 신상 아이템</p>
         </div>
-        
+
         <article class="productWrap">
           <ul class="product"></ul>
         </article>
