Style: change main_img

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -79,10 +79,7 @@
           </iframe> -->
 
           <div class="sideIframe">
-            <img
-              src="https://images.unsplash.com/photo-1621334119886-cbc9e36fcf7c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-              alt="jewerly_img"
-            />
+            <img src="../images/main_img.jpg" alt="jewerly_img" />
           </div>
 
           <div class="besideIframe">
