--- a/src/views/admin-product/admin-product.html
+++ b/src/views/admin-product/admin-product.html
@@ -38,7 +38,7 @@
       <div class="container">
         <!-- 제목 -->
         <div class="block account-header">
-          <h1 class="subtitle is-4">주문관리</h1>
+          <h1 class="subtitle is-4">제 품 관 리</h1>
         </div>
         <div>
           <a href="/product/add" 
